# influxdb-client-rs

./: Cargo.toml  LICENSE  README.md  crates.js  search-index.js  settings.html  source-files.js
.github/workflows/: docs.yml  test.yml
derives/: Cargo.toml
derives/src/: lib.rs
implementors/alloc/string/: trait.ToString.js
implementors/core/clone/: trait.Clone.js
implementors/core/convert/: trait.From.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/influxdb_client/: trait.PointSerialize.js
implementors/std/error/: trait.Error.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
influxdb-client/: Cargo.toml  README.md
influxdb-client/src/: client.rs  escape.rs  lib.rs  macros.rs  models.rs  query.rs  traits.rs  transporter.rs
influxdb-client/tests/: test_client_write.rs  test_derive_point_serialize.rs  test_local_insert.rs  test_point_serialize.rs
influxdb-derive/: Cargo.toml
influxdb-derives/: Cargo.toml
influxdb-derives/src/: lib.rs
influxdb_client/: all.html  enum.InfluxError.html  enum.Precision.html  enum.Timestamp.html  enum.TimestampOptions.html  enum.Value.html  index.html  macro.timestamp.html  sidebar-items.js  struct.Client.html  struct.Point.html  trait.PointSerialize.html
influxdb_client/client/: struct.Client.html
influxdb_client/derives/: derive.PointSerialize.html  index.html  sidebar-items.js
influxdb_client/models/: enum.InfluxError.html  enum.Precision.html  enum.Timestamp.html  enum.TimestampOptions.html  enum.Value.html  struct.Point.html
influxdb_client/traits/: trait.PointSerialize.html
influxdb_derive/: Cargo.toml
influxdb_derives/: all.html  derive.PointSerialize.html  index.html
src/: client.rs  lib.rs  models.rs  traits.rs
src/influxdb_client/: client.rs.html  escape.rs.html  lib.rs.html  macros.rs.html  models.rs.html  traits.rs.html
src/influxdb_derives/: lib.rs.html
