[package]
name = "influxdb-client-rs"
version = "0.1.0"
authors = ["Anders Hallem Iversen <andershallemiversen@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.1", default-features = false }


[dev-dependencies]
tokio-test = "0.4.0"