[package]
name = "influxdb-client-rs"
version = "0.1.0"
authors = ["Anders Hallem Iversen <andershallemiversen@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.1", default-features = false }
derives = { path = "./derives" }

[dev-dependencies]
chrono = "0.4.19"
mockito = "0.29.0"
rand = "0.8.3"
tokio-test = "0.4.0"

